--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -18,10 +18,14 @@
       <div class="form-control">
         <label for="summary">Summary</label>
         <input type="text" id="summary" name="summary" required maxlength="255">
+        <label for="password">Password</label>
+        <input type="number" id="password" name="password" required maxlength="4">
+
       </div>
       <div class="form-control">
         <label for="content">Post Content</label>
         <textarea id="content" name="content" required rows="5"></textarea>
+        
       </div>
       <div class="form-control">
         <label for="author">Select Author</label>
@@ -35,6 +39,7 @@
       <button class="btn">Add Post</button>
     </form>
   </main>
+  <%- include('includes/footer') %>
 </body>
 
 </html>
