--- a/views/update-post.ejs
+++ b/views/update-post.ejs
@@ -25,7 +25,7 @@
       </div>
       <div class="form-control">
         <label for="content">Post Content</label>
-        <textarea id="content"  name="content" required rows="5"><% post.body %></textarea>
+        <textarea id="content"  name="content" required rows="5"><%= post.body %></textarea>
       </div>
       <button class="btn">Update Post</button>
     </form>
